# uTox

./: .clang-format  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  GNUmakefile  INSTALL.md  LICENSE  Makefile  README.md  appveyor.yml  arm-linux-gnueabihf-4.9.cmake  audio.c  audio.h  avatar.c  avatar.h  bootstrap.h  button.c  button.h  circle.yml  colors.h  commands.c  commands.h  contextmenu.c  contextmenu.h  core.c  core.h  dns.c  dns.h  draw.h  dropdown.c  dropdown.h  edit.c  edit.h  file_transfers.c  file_transfers.h  filter_audio.c  (+63 more)
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yaml
android/: AndroidManifest.xml  audio.c  freetype.c  gl.c  main.c  main.h
cmake/: FindDBus.cmake  FindLibfilteraudio.cmake  FindLibtoxcore.cmake  FindToxcore.cmake  Findlibfilteraudio.cmake  Findlibfontconfig.cmake  Findlibopus.cmake  Findlibsodium.cmake  Findlibtox.cmake  Findlibtoxcore.cmake  Findlibv4lconvert.cmake  Findlibvpx.cmake  OutOfSource-build.cmake  macOS.cmake  outofsource-build.cmake  toolchain-freebsd.cmake  toolchain-openbsd.cmake  toolchain-win32.cmake  toolchain-win64.cmake  win.cmake
cmake/windows/: toolchain-win32.cmake
cocoa/: Info.plist  MainMenu.xib  Makefile  cursor.h  drawing.m  find_static.sh  frozen_dmg.tar.bz2  grabdesktop.m  interaction.m  main.h  main.m  make_info_plist.sh  objc_main.h  video.m
docs/: BUILD.md  COCOA.md  DEPENDENCIES.md  INSTALL.md  stable-checklist.md  utox_theme.ini
extra/common/: build_nacl.sh  build_openal.sh  build_opus.sh  build_vpx.sh  (+4 more)
icons/: call.c  contact.c  file.c  group.c  groups.c  icon.rc  misc.c  no.c  pause.c  settings.c  transfer.c  utox.icns  utox_icon128.h  yes.c
langs/: bg.h  br.h  cn.h  cs.h  da.h  de.h  dk.h  en.h  eo.h  es.h  et.h  fr.h  hi.h  hr.h  hu.h  i18n_decls.h  it.h  ja.h  lv.h  nl.h  no.h  pl.h  pt.h  ro.h  ru.h  sv.h  tr.h  tw.h  ua.h  uk.h
man/: utox.1.in
mk/: common.mk  osx.mk  unix.mk  windows.mk
png/: png.c
release_notes/: INDEX.md  v0.17.1.md  v0.17.2.md  v0.18.0.md  v0.18.1.md
res/: utox_theme.ini
screenshots/: INDEX.md
shared/: freetype-text.c
src/: CMakeLists.txt  audio.c  audio.h  avatar.c  avatar.h  branding.h  branding.h.in  button.c  button.h  chatlog.c  chatlog.h  chrono.c  chrono.h  command_funcs.c  command_funcs.h  commands.c  commands.h  contextmenu.c  debug.h  devices.c  devices.h  dns.c  dns.h  draw.h  dropdown.c  dropdown.h  edit.c  edit.h  file_transfers.c  file_transfers.h  filesys.c  filesys.h  filesys_native.h  flist.c  flist.h  friend.c  friend.h  globals.c  group_invite.c  group_invite.h  (+73 more)
src/android/: AndroidManifest.xml  AndroidManifest.xml.in  audio.c  freetype.c  freetype.h  gl.c  gl.h  logging.h  main.c  main.h
src/av/: CMakeLists.txt  audio.c  audio.h  filter_audio.c  filter_audio.h  globals.c  utox_av.c  utox_av.h  video.c  video.h
src/cocoa/: CMakeLists.txt  Info.plist  Info.plist.in  MainMenu.xib  Makefile  drawing.m  grabdesktop.m  interaction.m  logging.h  logging.m  main.h  main.m  make_dmg.sh  make_info_plist.sh  objc_main.h  video.m  window.c
src/langs/: bg.h  br.h  cn.h  da.h  en.h  fr.h  nl.h  pt.h  ro.h  sv.h  tw.h  ua.h
src/layout/: CMakeLists.txt  README.md  all.h  background.c  background.h  create.h  extra.h  friend.c  friend.h  group.c  group.h  group_invite.c  group_invite.h  layout_all.h  layout_notify.h  layout_root.h  notify.c  notify.h  root.h  settings.c  settings.h  side_bar.c  sidebar.c  sidebar.h  tray.c  tray.h  tree.h  userbadge.c  userbadge.h  xlib_tray.c  xlib_tray.h
src/layout/tree/: notify.c  notify.h
src/native/: audio.h  clipboard.h  dialog.h  drawing.h  filesys.h  image.h  keyboard.h  main.h  notify.h  os.h  ptt.h  thread.h  time.h  ui.h  video.h  window.h
src/native/android/: image.h  keycodes.h
src/native/cocoa/: keycodes.h
src/native/win/: image.h  keycodes.h
src/native/xlib/: image.h  keycodes.h
src/png/: png.h
src/posix/: filesys.c
src/shared/: freetype-text.c
src/ui/: CMakeLists.txt  button.c  button.h  buttons.c  buttons.h  contextmenu.c  contextmenu.h  draw.c  draw.h  draw_helpers.c  draw_helpers.h  dropdown.c  dropdown.h  dropdowns.c  dropdowns.h  edit.c  edit.h  edits.c  edits.h  globals.c  layout_all.h  layout_notify.h  layout_root.h  layout_tree.h  panel.h  scrollable.c  scrollable.h  svg.c  svg.h  switch.c  switch.h  switches.c  switches.h  text.c  text.h  tooltip.c  tooltip.h  ui_buttons.c  ui_buttons.h  ui_buttons_settings.c  (+8 more)
src/ui/tree/: notify.c  notify.h
src/windows/: CMakeLists.txt  audio.c  dnd.c  drawing.c  drawing.h  events.c  events.h  filesys.c  logging.h  main.7.c  main.XP.c  main.c  main.h  notify.c  notify.h  os_video.c  screen_grab.c  screen_grab.h  utf8.c  utf8.h  utox.rc  video.c  window.c  window.h
src/xlib/: CMakeLists.txt  audio.c  dbus.c  dbus.h  drawing.c  drawing.h  event.c  filesys.c  freetype.c  freetype.h  globals.c  gtk.c  gtk.h  keysym2ucs.c  keysym2ucs.h  logging.h  main.c  main.h  mmenu.c  mmenu.h  notify.c  notify.h  screen_grab.c  screen_grab.h  tray.c  tray.h  v4l.c  video.c  window.c  window.h
tests/: CMakeLists.txt  run_tests.sh  test.h  test_chatlog.c  test_chrono.c  test_unicode.c  test_updater.c
tests/mock/: mock_filesys.c  mock_logging.c  mock_settings.c  mock_system_calls.c  mock_threads.c
tools/: android-build.sh  build-android.sh  checksum.sh  cross-compile-windows.sh  cygwin-compile.sh  hexdump_for_chatlogs.sh  logs_to_plaintext.c  relnotes_to_cstring.sed  sign-release.sh  timediff.py  update-bootstrap.py  update-chanelog.sh  update-changelog.sh
tox/: tox_save.tox  utox_save
travis/: GUI-before.sh  GUI-script.sh  debug_failure.sh  env.sh  filter_audio.sh  linux-before.sh  linux-script.sh  osx-before.sh  osx-docker.sh  osx-script.sh  windows-before.sh  windows-script.sh  windows_legacy-before.sh  windows_legacy-script.sh
win32/: Makefile  audio.c  dnd.c  main.c  main.h
windows/: audio.c  dnd.c  example.reg  main.7.c  main.XP.c  main.c  main.h
xlib/: audio.c  dbus.c  event.c  freetype.c  gtk.c  keysym2ucs.c  main.c  main.h  mmenu.c  mmenu.h  v4l.c  video.c  xembed.h
(+27 files in other folders)
